--- a/projects/MobileDashboard/force-app/main/default/translations/hr.translation-meta.xml
+++ b/projects/MobileDashboard/force-app/main/default/translations/hr.translation-meta.xml
@@ -10,7 +10,8 @@
     </customLabels>
     <customLabels>
         <name>MobileDashboard_settings_description</name>
-        <label>Konfigurirajte svoje kartice nadzorne ploče. Za bolju izvedbu, ograničite kartice nadzorne ploče na pet kartica.</label>
+        <label
+    >Konfigurirajte svoje kartice nadzorne ploče. Za bolju izvedbu, ograničite kartice nadzorne ploče na pet kartica.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_settings_add_card_button</name>
@@ -86,7 +87,8 @@
     </customLabels>
     <customLabels>
         <name>MobileDashboard_card_modal_details_filter_field_infobubble</name>
-        <label>Nakon što odaberete objekt, definirajte koji će zapisi biti uključeni u karticu.</label>
+        <label
+    >Nakon što odaberete objekt, definirajte koji će zapisi biti uključeni u karticu.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_card_modal_details_filter_logic_and</name>
@@ -121,8 +123,10 @@
         <label>Prilagođena logika</label>
     </customLabels>
     <customLabels>
-        <name>MobileDashboard_card_modal_details_custom_logic_field_infobubble</name>
-        <label>Navedite prilagođenu logiku. Dodajte brojeve koji će se referirati na svaki uvjet. Koristite I ili ILI kako biste identificirali kombinaciju uvjeta. Dodajte zagrade kako biste grupirali dijelove niza. Primjerice, 1 I (2 ILI 3) procjenjuje je li prvi uvjet točan i jesu li drugi ili treći uvjet točni.</label>
+        <name
+    >MobileDashboard_card_modal_details_custom_logic_field_infobubble</name>
+        <label
+    >Navedite prilagođenu logiku. Dodajte brojeve koji će se referirati na svaki uvjet. Koristite I ili ILI kako biste identificirali kombinaciju uvjeta. Dodajte zagrade kako biste grupirali dijelove niza. Primjerice, 1 I (2 ILI 3) procjenjuje je li prvi uvjet točan i jesu li drugi ili treći uvjet točni.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_card_modal_design_tab_name</name>
@@ -137,16 +141,20 @@
         <label>Jedno uz drugo</label>
     </customLabels>
     <customLabels>
-        <name>MobileDashboard_card_modal_design_tab_layout_side_description</name>
-        <label>Štedi okomiti prostor. Preporučeno za kratke nazive polja.</label>
+        <name
+    >MobileDashboard_card_modal_design_tab_layout_side_description</name>
+        <label
+    >Štedi okomiti prostor. Preporučeno za kratke nazive polja.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_card_modal_design_tab_layout_stack_title</name>
         <label>Naslagano</label>
     </customLabels>
     <customLabels>
-        <name>MobileDashboard_card_modal_design_tab_layout_stack_description</name>
-        <label>Koristi više okomitog prostora. Preporučeno za duge nazive polja.</label>
+        <name
+    >MobileDashboard_card_modal_design_tab_layout_stack_description</name>
+        <label
+    >Koristi više okomitog prostora. Preporučeno za duge nazive polja.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_card_modal_design_tab_card_data_title</name>
@@ -382,7 +390,8 @@
     </customLabels>
     <customLabels>
         <name>MobileDashboard_settings_error_save_card</name>
-        <label>Nismo mogli spremiti vaše promjene. Pokušajte ponovno kasnije.</label>
+        <label
+    >Nismo mogli spremiti vaše promjene. Pokušajte ponovno kasnije.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_settings_error_delete_card</name>
@@ -390,7 +399,8 @@
     </customLabels>
     <customLabels>
         <name>MobileDashboard_settings_error_duplicate_card</name>
-        <label>Nismo mogli duplicirati karticu. Pokušajte ponovno kasnije.</label>
+        <label
+    >Nismo mogli duplicirati karticu. Pokušajte ponovno kasnije.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_card_object_field</name>
@@ -406,7 +416,8 @@
     </customLabels>
     <customLabels>
         <name>MobileDashboard_preview_title_infobubble</name>
-        <label>Prikaz pretpregleda može se malo razlikovati od stvarnog prikaza na mobilnom uređaju.</label>
+        <label
+    >Prikaz pretpregleda može se malo razlikovati od stvarnog prikaza na mobilnom uređaju.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_settings_duplicate_button</name>
