--- a/projects/MobileDashboard/force-app/main/default/translations/bg.translation-meta.xml
+++ b/projects/MobileDashboard/force-app/main/default/translations/bg.translation-meta.xml
@@ -10,7 +10,8 @@
     </customLabels>
     <customLabels>
         <name>MobileDashboard_settings_description</name>
-        <label>Конфигурирайте картите на таблото си. За по-добра производителност ограничете картите на таблото до пет.</label>
+        <label
+    >Конфигурирайте картите на таблото си. За по-добра производителност ограничете картите на таблото до пет.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_settings_add_card_button</name>
@@ -86,7 +87,8 @@
     </customLabels>
     <customLabels>
         <name>MobileDashboard_card_modal_details_filter_field_infobubble</name>
-        <label>След като изберете обект, дефинирайте кои записи да бъдат включени в картата.</label>
+        <label
+    >След като изберете обект, дефинирайте кои записи да бъдат включени в картата.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_card_modal_details_filter_logic_and</name>
@@ -121,8 +123,10 @@
         <label>Логаритъм по избор</label>
     </customLabels>
     <customLabels>
-        <name>MobileDashboard_card_modal_details_custom_logic_field_infobubble</name>
-        <label>Дайте логиката на условието. Използвайте цифри за препратка към всяко условие. Използвайте И или ИЛИ за идентифициране на комбинацията от условия. Добавете скоби, за да групирате части от низа. Например „1 И (2 ИЛИ 3)“ оценява дали първото условие е вярно и дали второто или третото е вярно.</label>
+        <name
+    >MobileDashboard_card_modal_details_custom_logic_field_infobubble</name>
+        <label
+    >Дайте логиката на условието. Използвайте цифри за препратка към всяко условие. Използвайте И или ИЛИ за идентифициране на комбинацията от условия. Добавете скоби, за да групирате части от низа. Например „1 И (2 ИЛИ 3)“ оценява дали първото условие е вярно и дали второто или третото е вярно.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_card_modal_design_tab_name</name>
@@ -137,16 +141,20 @@
         <label>Една до друга</label>
     </customLabels>
     <customLabels>
-        <name>MobileDashboard_card_modal_design_tab_layout_side_description</name>
-        <label>Спестява място вертикално. Препоръчва се за кратки имена на полета.</label>
+        <name
+    >MobileDashboard_card_modal_design_tab_layout_side_description</name>
+        <label
+    >Спестява място вертикално. Препоръчва се за кратки имена на полета.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_card_modal_design_tab_layout_stack_title</name>
         <label>Насложени</label>
     </customLabels>
     <customLabels>
-        <name>MobileDashboard_card_modal_design_tab_layout_stack_description</name>
-        <label>Използва повече място вертикално. Препоръчва се за дълги имена на полета.</label>
+        <name
+    >MobileDashboard_card_modal_design_tab_layout_stack_description</name>
+        <label
+    >Използва повече място вертикално. Препоръчва се за дълги имена на полета.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_card_modal_design_tab_card_data_title</name>
@@ -382,7 +390,8 @@
     </customLabels>
     <customLabels>
         <name>MobileDashboard_settings_error_save_card</name>
-        <label>Не успяхме да запишем промените ви. Опитайте отново по-късно.</label>
+        <label
+    >Не успяхме да запишем промените ви. Опитайте отново по-късно.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_settings_error_delete_card</name>
@@ -390,7 +399,8 @@
     </customLabels>
     <customLabels>
         <name>MobileDashboard_settings_error_duplicate_card</name>
-        <label>Не успяхме да дублираме картата. Опитайте отново по-късно.</label>
+        <label
+    >Не успяхме да дублираме картата. Опитайте отново по-късно.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_card_object_field</name>
@@ -406,7 +416,8 @@
     </customLabels>
     <customLabels>
         <name>MobileDashboard_preview_title_infobubble</name>
-        <label>Прегледът може малко да се различава от действителния дисплей на мобилното устройство.</label>
+        <label
+    >Прегледът може малко да се различава от действителния дисплей на мобилното устройство.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_settings_duplicate_button</name>
