--- a/projects/MobileDashboard/force-app/main/default/translations/ru.translation-meta.xml
+++ b/projects/MobileDashboard/force-app/main/default/translations/ru.translation-meta.xml
@@ -10,7 +10,8 @@
     </customLabels>
     <customLabels>
         <name>MobileDashboard_settings_description</name>
-        <label>Настройте карточки панели мониторинга. Для повышения производительности ограничьте панель мониторинга пятью карточками.</label>
+        <label
+    >Настройте карточки панели мониторинга. Для повышения производительности ограничьте панель мониторинга пятью карточками.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_settings_add_card_button</name>
@@ -86,7 +87,8 @@
     </customLabels>
     <customLabels>
         <name>MobileDashboard_card_modal_details_filter_field_infobubble</name>
-        <label>После выбора объекта определите, какие записи включены в карточку.</label>
+        <label
+    >После выбора объекта определите, какие записи включены в карточку.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_card_modal_details_filter_logic_and</name>
@@ -121,8 +123,10 @@
         <label>Настраиваемая логика</label>
     </customLabels>
     <customLabels>
-        <name>MobileDashboard_card_modal_details_custom_logic_field_infobubble</name>
-        <label>Предоставьте логику условия. Используйте числа для обозначения каждого условия. Используйте значения OR или AND, чтобы определить комбинацию условий. Добавьте круглые скобки, чтобы сгруппировать части строки вместе. Например, 1 AND (2 OR 3) оценивает, является ли истинным первое условие, а также второе или третье условие.</label>
+        <name
+    >MobileDashboard_card_modal_details_custom_logic_field_infobubble</name>
+        <label
+    >Предоставьте логику условия. Используйте числа для обозначения каждого условия. Используйте значения OR или AND, чтобы определить комбинацию условий. Добавьте круглые скобки, чтобы сгруппировать части строки вместе. Например, 1 AND (2 OR 3) оценивает, является ли истинным первое условие, а также второе или третье условие.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_card_modal_design_tab_name</name>
@@ -137,16 +141,20 @@
         <label>Параллельная ориентация</label>
     </customLabels>
     <customLabels>
-        <name>MobileDashboard_card_modal_design_tab_layout_side_description</name>
-        <label>Сохраняет интервал по вертикали. Рекомендовано для короткий имен полей.</label>
+        <name
+    >MobileDashboard_card_modal_design_tab_layout_side_description</name>
+        <label
+    >Сохраняет интервал по вертикали. Рекомендовано для короткий имен полей.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_card_modal_design_tab_layout_stack_title</name>
         <label>В столбик</label>
     </customLabels>
     <customLabels>
-        <name>MobileDashboard_card_modal_design_tab_layout_stack_description</name>
-        <label>Использует больше интервала по вертикали. Рекомендовано для длинных имен полей.</label>
+        <name
+    >MobileDashboard_card_modal_design_tab_layout_stack_description</name>
+        <label
+    >Использует больше интервала по вертикали. Рекомендовано для длинных имен полей.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_card_modal_design_tab_card_data_title</name>
@@ -406,7 +414,8 @@
     </customLabels>
     <customLabels>
         <name>MobileDashboard_preview_title_infobubble</name>
-        <label>Отображение предварительного просмотра может немного отличаться от фактического отображения мобильного устройства.</label>
+        <label
+    >Отображение предварительного просмотра может немного отличаться от фактического отображения мобильного устройства.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_settings_duplicate_button</name>
