--- a/projects/MobileDashboard/force-app/main/default/translations/sk.translation-meta.xml
+++ b/projects/MobileDashboard/force-app/main/default/translations/sk.translation-meta.xml
@@ -10,7 +10,8 @@
     </customLabels>
     <customLabels>
         <name>MobileDashboard_settings_description</name>
-        <label>Nakonfigurujte karty na ovládacom paneli. Pre lepší výkon obmedzte ovládací panel na päť kariet.</label>
+        <label
+    >Nakonfigurujte karty na ovládacom paneli. Pre lepší výkon obmedzte ovládací panel na päť kariet.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_settings_add_card_button</name>
@@ -86,7 +87,8 @@
     </customLabels>
     <customLabels>
         <name>MobileDashboard_card_modal_details_filter_field_infobubble</name>
-        <label>Po výbere objektu definujte, ktoré záznamy sú zahrnuté v karte.</label>
+        <label
+    >Po výbere objektu definujte, ktoré záznamy sú zahrnuté v karte.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_card_modal_details_filter_logic_and</name>
@@ -121,8 +123,10 @@
         <label>Vlastná logika</label>
     </customLabels>
     <customLabels>
-        <name>MobileDashboard_card_modal_details_custom_logic_field_infobubble</name>
-        <label>Uveďte logiku podmienky. Na označenie každej podmienky použite čísla. Na označenie kombinácie podmienok použite AND alebo OR. Pridajte zátvorky na zoskupenie častí reťazca. Napríklad 1 AND (2 OR 3) vyhodnocuje, či je prvá podmienka splnená a druhá alebo tretia podmienka splnená.</label>
+        <name
+    >MobileDashboard_card_modal_details_custom_logic_field_infobubble</name>
+        <label
+    >Uveďte logiku podmienky. Na označenie každej podmienky použite čísla. Na označenie kombinácie podmienok použite AND alebo OR. Pridajte zátvorky na zoskupenie častí reťazca. Napríklad 1 AND (2 OR 3) vyhodnocuje, či je prvá podmienka splnená a druhá alebo tretia podmienka splnená.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_card_modal_design_tab_name</name>
@@ -137,16 +141,20 @@
         <label>Vedľa seba</label>
     </customLabels>
     <customLabels>
-        <name>MobileDashboard_card_modal_design_tab_layout_side_description</name>
-        <label>Šetrí vertikálny priestor. Odporúča sa pre krátke názvy polí.</label>
+        <name
+    >MobileDashboard_card_modal_design_tab_layout_side_description</name>
+        <label
+    >Šetrí vertikálny priestor. Odporúča sa pre krátke názvy polí.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_card_modal_design_tab_layout_stack_title</name>
         <label>Nad sebou</label>
     </customLabels>
     <customLabels>
-        <name>MobileDashboard_card_modal_design_tab_layout_stack_description</name>
-        <label>Využíva viac vertikálneho priestoru. Odporúča sa pre dlhé názvy polí.</label>
+        <name
+    >MobileDashboard_card_modal_design_tab_layout_stack_description</name>
+        <label
+    >Využíva viac vertikálneho priestoru. Odporúča sa pre dlhé názvy polí.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_card_modal_design_tab_card_data_title</name>
@@ -170,7 +178,8 @@
     </customLabels>
     <customLabels>
         <name>MobileDashboard_sub_filter_color_field_infobubble</name>
-        <label>Ak chcete dosiahnuť čo najlepšiu viditeľnosť, vyberte si kontrastné farby.</label>
+        <label
+    >Ak chcete dosiahnuť čo najlepšiu viditeľnosť, vyberte si kontrastné farby.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_sub_filter_options</name>
@@ -374,7 +383,8 @@
     </customLabels>
     <customLabels>
         <name>MobileDashboard_settings_delete_sub_filter_warning_body</name>
-        <label>Týmto sa odstránia údaje karty z karty ovládacieho panela.</label>
+        <label
+    >Týmto sa odstránia údaje karty z karty ovládacieho panela.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_settings_error_add_card</name>
@@ -406,7 +416,8 @@
     </customLabels>
     <customLabels>
         <name>MobileDashboard_preview_title_infobubble</name>
-        <label>Zobrazenie náhľadu sa môže mierne líšiť od skutočného zobrazenia na mobilnom zariadení.</label>
+        <label
+    >Zobrazenie náhľadu sa môže mierne líšiť od skutočného zobrazenia na mobilnom zariadení.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_settings_duplicate_button</name>
