--- a/projects/MobileDashboard/force-app/main/default/translations/sv.translation-meta.xml
+++ b/projects/MobileDashboard/force-app/main/default/translations/sv.translation-meta.xml
@@ -10,7 +10,8 @@
     </customLabels>
     <customLabels>
         <name>MobileDashboard_settings_description</name>
-        <label>Konfigurera dina instrumentpanelskort. För bättre prestanda, begränsa instrumentpanelen till fem kort.</label>
+        <label
+    >Konfigurera dina instrumentpanelskort. För bättre prestanda, begränsa instrumentpanelen till fem kort.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_settings_add_card_button</name>
@@ -86,7 +87,8 @@
     </customLabels>
     <customLabels>
         <name>MobileDashboard_card_modal_details_filter_field_infobubble</name>
-        <label>Efter att du har valt ett objekt, definiera vilka poster som ingår i kortet.</label>
+        <label
+    >Efter att du har valt ett objekt, definiera vilka poster som ingår i kortet.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_card_modal_details_filter_logic_and</name>
@@ -121,8 +123,10 @@
         <label>Egen logik</label>
     </customLabels>
     <customLabels>
-        <name>MobileDashboard_card_modal_details_custom_logic_field_infobubble</name>
-        <label>Ange villkorslogiken. Använd siffror för att referera till varje tillstånd. Använd OCH eller ELLER för att identifiera kombinationen av villkor. Lägg till parenteser för att gruppera delar av strängen tillsammans. Till exempel utvärderar 1 OCH (2 ELLER 3) om det första villkoret är sant, och om något av det andra eller tredje villkoret är sant.</label>
+        <name
+    >MobileDashboard_card_modal_details_custom_logic_field_infobubble</name>
+        <label
+    >Ange villkorslogiken. Använd siffror för att referera till varje tillstånd. Använd OCH eller ELLER för att identifiera kombinationen av villkor. Lägg till parenteser för att gruppera delar av strängen tillsammans. Till exempel utvärderar 1 OCH (2 ELLER 3) om det första villkoret är sant, och om något av det andra eller tredje villkoret är sant.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_card_modal_design_tab_name</name>
@@ -137,16 +141,20 @@
         <label>Sida vid sida</label>
     </customLabels>
     <customLabels>
-        <name>MobileDashboard_card_modal_design_tab_layout_side_description</name>
-        <label>Sparar vertikalt utrymme. Rekommenderas för korta fältnamn.</label>
+        <name
+    >MobileDashboard_card_modal_design_tab_layout_side_description</name>
+        <label
+    >Sparar vertikalt utrymme. Rekommenderas för korta fältnamn.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_card_modal_design_tab_layout_stack_title</name>
         <label>Staplad</label>
     </customLabels>
     <customLabels>
-        <name>MobileDashboard_card_modal_design_tab_layout_stack_description</name>
-        <label>Använder mer vertikalt utrymme. Rekommenderas för långa fältnamn.</label>
+        <name
+    >MobileDashboard_card_modal_design_tab_layout_stack_description</name>
+        <label
+    >Använder mer vertikalt utrymme. Rekommenderas för långa fältnamn.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_card_modal_design_tab_card_data_title</name>
@@ -406,7 +414,8 @@
     </customLabels>
     <customLabels>
         <name>MobileDashboard_preview_title_infobubble</name>
-        <label>Förhandsvisning kan skilja sig något från den faktiska mobilenhetens display.</label>
+        <label
+    >Förhandsvisning kan skilja sig något från den faktiska mobilenhetens display.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_settings_duplicate_button</name>
