--- a/projects/MobileDashboard/force-app/main/default/translations/th.translation-meta.xml
+++ b/projects/MobileDashboard/force-app/main/default/translations/th.translation-meta.xml
@@ -10,7 +10,8 @@
     </customLabels>
     <customLabels>
         <name>MobileDashboard_settings_description</name>
-        <label>กำหนดค่าการ์ดแดชบอร์ดของคุณ เพื่อประสิทธิภาพที่ดีขึ้น ให้จำกัดจำนวนการ์ดสูงสุดห้ารายการ</label>
+        <label
+    >กำหนดค่าการ์ดแดชบอร์ดของคุณ เพื่อประสิทธิภาพที่ดีขึ้น ให้จำกัดจำนวนการ์ดสูงสุดห้ารายการ</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_settings_add_card_button</name>
@@ -121,8 +122,10 @@
         <label>ตรรกะแบบกำหนดเอง</label>
     </customLabels>
     <customLabels>
-        <name>MobileDashboard_card_modal_details_custom_logic_field_infobubble</name>
-        <label>ป้อนตรรกะเงื่อนไข ใช้ตัวเลขเพื่ออ้างถึงเงื่อนไขแต่ละรายการ ใช้ AND หรือ OR เพื่อบ่งชี้ชุดของเงื่อนไข เพิ่มวงเล็บเพื่อจัดกลุ่มส่วนต่าง ๆ ของสตริงเข้าด้วยกัน เช่น 1 AND (2 OR 3) ประเมินว่าเงื่อนไขแรกเป็นจริงหรือไม่ และเงื่อนไขที่สองหรือสาม รายการใดรายการหนึ่งที่เป็นจริง</label>
+        <name
+    >MobileDashboard_card_modal_details_custom_logic_field_infobubble</name>
+        <label
+    >ป้อนตรรกะเงื่อนไข ใช้ตัวเลขเพื่ออ้างถึงเงื่อนไขแต่ละรายการ ใช้ AND หรือ OR เพื่อบ่งชี้ชุดของเงื่อนไข เพิ่มวงเล็บเพื่อจัดกลุ่มส่วนต่าง ๆ ของสตริงเข้าด้วยกัน เช่น 1 AND (2 OR 3) ประเมินว่าเงื่อนไขแรกเป็นจริงหรือไม่ และเงื่อนไขที่สองหรือสาม รายการใดรายการหนึ่งที่เป็นจริง</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_card_modal_design_tab_name</name>
@@ -137,7 +140,8 @@
         <label>แบบเรียงข้างกัน</label>
     </customLabels>
     <customLabels>
-        <name>MobileDashboard_card_modal_design_tab_layout_side_description</name>
+        <name
+    >MobileDashboard_card_modal_design_tab_layout_side_description</name>
         <label>ประหยัดพื้นที่ในแนวตั้ง แนะนำสำหรับชื่อฟิลด์สั้น ๆ</label>
     </customLabels>
     <customLabels>
@@ -145,7 +149,8 @@
         <label>แบบเรียงซ้อน</label>
     </customLabels>
     <customLabels>
-        <name>MobileDashboard_card_modal_design_tab_layout_stack_description</name>
+        <name
+    >MobileDashboard_card_modal_design_tab_layout_stack_description</name>
         <label>ใช้พื้นที่ในแนวตั้งมากขึ้น แนะนำสำหรับชื่อฟิลด์ยาว ๆ</label>
     </customLabels>
     <customLabels>
@@ -382,7 +387,8 @@
     </customLabels>
     <customLabels>
         <name>MobileDashboard_settings_error_save_card</name>
-        <label>เราไม่สามารถบันทึกการเปลี่ยนแปลงของคุณ ลองอีกครั้งในภายหลัง</label>
+        <label
+    >เราไม่สามารถบันทึกการเปลี่ยนแปลงของคุณ ลองอีกครั้งในภายหลัง</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_settings_error_delete_card</name>
@@ -406,7 +412,8 @@
     </customLabels>
     <customLabels>
         <name>MobileDashboard_preview_title_infobubble</name>
-        <label>หน้าจอการแสดงตัวอย่างอาจต่างจากหน้าจออุปกรณ์มือถือจริงเล็กน้อย</label>
+        <label
+    >หน้าจอการแสดงตัวอย่างอาจต่างจากหน้าจออุปกรณ์มือถือจริงเล็กน้อย</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_settings_duplicate_button</name>
